--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
               with:
                   name: Pharamacy-Data.jar
                   path: target/
-            - uses: GoogleCloudPlatform/github-actions/setup-gcloud@main
+            - uses:  google-github-actions/setup-gcloud@v0
               with:
                   version: '275.0.0'
                   service_account_email: ${{ secrets.SA_EMAIL }}
@@ -45,12 +45,13 @@ jobs:
             - name: gcloud Set up
               run: |
                 gcloud config set project $PROJECT_ID
-            - name: checkout
-              uses: actions/checkout@v2
-            - name: Build and push
-              uses: docker/build-push-action@v4
-              with:
-                context: .
-                push: true
-                tags: gcr.io/$PROJECT_ID/$SERVICE_NAME:latest
+          # Build the Docker image
+            - name: Build
+              run: |
+                docker build -t gcr.io/$PROJECT_ID/pharamacy-deda-github -f Dockerfile .
+
+      # Push the Docker image to Google Container Registry
+            - name: Publish
+              run: |
+                docker push gcr.io/$PROJECT_ID/pharamacy-deda-github
 
