--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,8 @@ jobs:
               uses: 'google-github-actions/setup-gcloud@v1'
 
             - name: 'Use gcloud CLI'
-              run: 'gcloud info'
+              run: |
+                    gcloud auth configure-docker
           # Build the Docker image
             - name: Build
               run: |
