--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,14 @@ jobs:
           # Build the Docker image
             - name: Build
               run: |
-                docker build -t gcr.io/$PROJECT_ID/pharamacy-deda-github -f Dockerfile .
+                docker build -t gcr.io/$PROJECT_ID/pharamacy-deda-github:latest -f Dockerfile .
 
       # Push the Docker image to Google Container Registry
             - name: Publish
               run: |
-                docker push gcr.io/$PROJECT_ID/pharamacy-deda-github
+                docker push gcr.io/$PROJECT_ID/pharamacy-deda-github:latest
+                  # Push the Docker image to Google Container Registry
+            - name: Build Flex Template
+              run: |
+                gcloud dataflow flex-template build gs://pharamacy-deda/template/run_template_new.json --image gcr.io/$PROJECT_ID/pharamacy-deda-github:latest --sdk-language JAVA
 
