--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to Cloud Run
+name: Build and Deploy to Dataflow
 
 on:
     push:
@@ -17,7 +17,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - run: mvn package -DskipTests
+            - run: mvn clean install
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
               with:
@@ -59,4 +59,16 @@ jobs:
             - name: Build Flex Template
               run: |
                 gcloud dataflow flex-template build gs://pharamacy-deda/template/run_template_new.json --image gcr.io/$PROJECT_ID/pharamacy-deda-github:latest --sdk-language JAVA
+            - name: Run Flex Template
+              run: |
+                gcloud dataflow flex-template run "testjob-$(date +%Y%m%d-%H%M%S)" \
+                  --template-file-gcs-location=gs://pharamacy-deda/template/run_template_new.json \
+                  --worker-region=us-east4 \
+                  --worker-machine-type=e2-medium \
+                  --region=us-east4 \
+                  --service-account-email=dataflow-run@de-da-ml.iam.gserviceaccount.com \
+                  --num-workers=1 \
+                  --parameters gcpProject=de-da-ml \
+                  --parameters tempLocation=gs://pharamacy-deda/staging_location \
+                  --parameters stagingLocation=gs://pharamacy-deda/temp_location
 
