--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,80 +1,80 @@
 name: Build and Deploy to Dataflow
 
 on:
-    push:
-        branches:
-            - develop
+  push:
+    branches:
+      - develop
 
 # Environment variables available to all jobs and steps in this workflow
 env:
-    PROJECT_ID: ${{ secrets.PROJECT_ID }}
-    RUN_REGION: us-east1
-    SERVICE_NAME: "medication-form-job-$(date +%Y%m%d-%H%M%S)"
-    WORKER_REGION: us-east1
-    WORKER_MACHINE_TYPE: e2-medium
-    NUM_WORKERS:  1
-    TEMP_LOCATION: gs://pharamacy-deda/staging_location
-    STAGING_LOCATION: gs://pharamacy-deda/temp_location
+  PROJECT_ID: ${{ secrets.PROJECT_ID }}
+  RUN_REGION: us-east1
+  SERVICE_NAME: "medication-form-job-$(date +%Y%m%d-%H%M%S)"
+  WORKER_REGION: us-east1
+  WORKER_MACHINE_TYPE: e2-medium
+  NUM_WORKERS:  1
+  TEMP_LOCATION: gs://pharamacy-deda/staging_location
+  STAGING_LOCATION: gs://pharamacy-deda/temp_location
 
 
 jobs:
-    setup-build-deploy:
-        name: Setup, Build, and Deploy
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - run: mvn clean install
-            - name: Upload Artifacts
-              uses: actions/upload-artifact@v2
-              with:
-                  name: Pharamacy-Data.jar
-                  path: target/
-    build-docker-image:
-        name: build-docker
-        needs: setup-build-deploy
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout
-              uses: actions/checkout@v2
-            - name: Retrieve saved jar
-              uses: actions/download-artifact@v2
-              with:
-                  name: Pharamacy-Data.jar
-                  path: target/
-            - id: 'auth'
-              uses: 'google-github-actions/auth@v1'
-              with:
-                credentials_json: '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'
+  setup-build-deploy:
+    name: Setup, Build, and Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: mvn clean install
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: Pharamacy-Data.jar
+          path: target/
+  build-docker-image:
+    name: build-docker
+    needs: setup-build-deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: Retrieve saved jar
+        uses: actions/download-artifact@v2
+        with:
+          name: Pharamacy-Data.jar
+          path: target/
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: '${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}'
 
-            - name: 'Set up Cloud SDK'
-              uses: 'google-github-actions/setup-gcloud@v1'
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
 
-            - name: 'Use gcloud CLI'
-              run: |
-                    gcloud auth configure-docker
-          # Build the Docker image
-            - name: Build
-              run: |
-                docker build -t us-east1-docker.pkg.dev/$PROJECT_ID/docker-images/pharamacy-deda-github:latest -f Dockerfile .
+      - name: 'Use gcloud CLI'
+        run: |
+          gcloud auth configure-docker
+      # Build the Docker image
+      - name: Build
+        run: |
+          docker build -t us-docker.pkg.dev/$PROJECT_ID/docker-images/pharamacy-deda-github:latest -f Dockerfile .
 
       # Push the Docker image to Google Container Registry
-            - name: Publish
-              run: |
-                docker push us-east1-docker.pkg.dev/$PROJECT_ID/docker-images/pharamacy-deda-github:latest
-                  # Push the Docker image to Google Container Registry
-            - name: Build Flex Template
-              run: |
-                gcloud dataflow flex-template build gs://pharamacy-deda-poc/templates/run_template_github.json --image us-east1-docker.pkg.dev/de-da-poc/docker-images/pharamacy-deda-github:latest --sdk-language JAVA
-            - name: Run Flex Template
-              run: |
-                gcloud dataflow flex-template run $SERVICE_NAME \
-                  --template-file-gcs-location=gs://pharamacy-deda-poc/templates/run_template_github.json \
-                  --worker-region=$WORKER_REGION \
-                  --worker-machine-type=$WORKER_MACHINE_TYPE \
-                  --region=$RUN_REGION \
-                  --service-account-email=${{ secrets.SA_EMAIL }} \
-                  --num-workers=$NUM_WORKERS \
-                  --parameters gcpProject=$PROJECT_ID \
-                  --parameters tempLocation=$TEMP_LOCATION \
-                  --parameters stagingLocation=$STAGING_LOCATION
+      - name: Publish
+        run: |
+          docker push us-docker.pkg.dev/$PROJECT_ID/docker-images/pharamacy-deda-github:latest
+            # Push the Docker image to Google Container Registry
+      - name: Build Flex Template
+        run: |
+          gcloud dataflow flex-template build gs://pharamacy-deda-poc/templates/run_template_github.json --image us-docker.pkg.dev/$PROJECT_ID/docker-images/pharamacy-deda-github:latest --sdk-language JAVA
+      - name: Run Flex Template
+        run: |
+          gcloud dataflow flex-template run $SERVICE_NAME \
+            --template-file-gcs-location=gs://pharamacy-deda-poc/templates/run_template_github.json \
+            --worker-region=$WORKER_REGION \
+            --worker-machine-type=$WORKER_MACHINE_TYPE \
+            --region=$RUN_REGION \
+            --service-account-email=${{ secrets.SA_EMAIL }} \
+            --num-workers=$NUM_WORKERS \
+            --parameters gcpProject=$PROJECT_ID \
+            --parameters tempLocation=$TEMP_LOCATION \
+            --parameters stagingLocation=$STAGING_LOCATION
 
